--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
         <div class="row">
           <span class="btn col" onclick="document.calci.txt.value += 'asec('">asec</span>
           <span class="btn col " onclick="document.calci.txt.value += 'acosec('">acosec</span>
+          <span class="btn col " onclick="document.calci.txt.value += '%'">%</span>
+          <span class="btn col" onclick="document.calci.txt.value += '3.14'">π</span>
 
         </div>
         <div class="row">
@@ -95,8 +97,8 @@
 
 
         <div class="row">
-          <span class="btn col " onclick="document.calci.txt.value += '%'">%</span>
-          <span class="btn col" onclick="document.calci.txt.value += '3.14'">π</span>
+          <span class="btn col col-3" onclick="document.calci.txt.value += '('">(</span>
+          <span class="btn col col-3" onclick="document.calci.txt.value += ')'">)</span>
           <span class="btn col col-6" onclick="equaling()">=</span>
 
         </div>
