--- a/index.html
+++ b/index.html
@@ -10,52 +10,55 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 
   </head>
-  <body>
+  <body style="background: var(--bg)">
     <form class="calculator" name="calci" >
      <div class="results">
+       <div class="switch">
+         <input type="checkbox" class="changemode" name="" value="">
+       </div>
        <input type="text"  class="result1" name="txtresult"  readonly>
        <input type="text" class="result" name="txt">
      </div>
       <div class="cards">
         <div class="row">
 
-          <span class="btn clear col col-6" onclick="clearing()">AC</span>
-          <span class="btn col col-3" onclick="document.calci.txt.value = document.calci.txt.value.slice(0, -1)"><i class="bi bi-backspace"></i></span>
-          <span class="btn col col-3" onclick="scientific()"><i class="bi bi-arrow-repeat"></i></span>
+          <span class="btn clear col col-6" style="background : var(--bg1)" onclick="clearing()">AC</span>
+          <span class="btn col col-3" style="background : var(--bg1)" onclick="document.calci.txt.value = document.calci.txt.value.slice(0, -1)"><i class="bi bi-backspace"></i></span>
+          <span class="btn col col-3" style="background : var(--bg1)" onclick="scientific()"><i class="bi bi-arrow-repeat"></i></span>
         </div>
       <div class="front">
 
         <div class="row">
 
-          <span class="btn col " onclick="document.calci.txt.value += '7'">7</span>
-          <span class="btn col " onclick="document.calci.txt.value += '8'">8</span>
-          <span class="btn col " onclick="document.calci.txt.value += '9'">9</span>
-          <span class="btn col " onclick="document.calci.txt.value += '*'">*</span>
+          <span class="btn col " style="background : var(--bg1)" onclick="document.calci.txt.value += '7'">7</span>
+          <span class="btn col " style="background : var(--bg1)" onclick="document.calci.txt.value += '8'">8</span>
+          <span class="btn col " style="background : var(--bg1)" onclick="document.calci.txt.value += '9'">9</span>
+          <span class="btn col " style="background : var(--bg1)" onclick="document.calci.txt.value += '*'">*</span>
         </div>
         <div class="row">
 
-          <span class="btn col " onclick="document.calci.txt.value += '4'">4</span>
-          <span class="btn col" onclick="document.calci.txt.value += '5'">5</span>
-          <span class="btn col " onclick="document.calci.txt.value += '6'">6</span>
-          <span class="btn col " onclick="document.calci.txt.value += '-'">-</span>
+          <span class="btn col " style="background : var(--bg1)" onclick="document.calci.txt.value += '4'">4</span>
+          <span class="btn col" style="background : var(--bg1)" onclick="document.calci.txt.value += '5'">5</span>
+          <span class="btn col " style="background : var(--bg1)" onclick="document.calci.txt.value += '6'">6</span>
+          <span class="btn col " style="background : var(--bg1)" onclick="document.calci.txt.value += '-'">-</span>
         </div>
         <div class="row">
 
-          <span class="btn col " onclick="document.calci.txt.value += '1'">1</span>
-          <span class="btn col" onclick="document.calci.txt.value += '2'">2</span>
-          <span class="btn col" onclick="document.calci.txt.value += '3'">3</span>
-          <span class="btn col " onclick="document.calci.txt.value += '+'">+</span>
+          <span class="btn col " style="background : var(--bg1)" onclick="document.calci.txt.value += '1'">1</span>
+          <span class="btn col" style="background : var(--bg1)" onclick="document.calci.txt.value += '2'">2</span>
+          <span class="btn col" style="background : var(--bg1)" onclick="document.calci.txt.value += '3'">3</span>
+          <span class="btn col " style="background : var(--bg1)" onclick="document.calci.txt.value += '+'">+</span>
         </div>
         <div class="row">
-          <span class="btn col" onclick="document.calci.txt.value += '0'">0</span>
-          <span class="btn col" onclick="document.calci.txt.value += '.'">.</span>
-          <span class="btn col " onclick="document.calci.txt.value = (+(document.calci.txt.value)>0 ? '-'.concat(document.calci.txt.value) : document.calci.txt.value.substring(1))">+/-</span>
-          <span class="btn col " onclick="document.calci.txt.value += '/'">/</span>
+          <span class="btn col" style="background : var(--bg1)" onclick="document.calci.txt.value += '0'">0</span>
+          <span class="btn col" style="background : var(--bg1)" onclick="document.calci.txt.value += '.'">.</span>
+          <span class="btn col " style="background : var(--bg1)" onclick="document.calci.txt.value = (+(document.calci.txt.value)>0 ? '-'.concat(document.calci.txt.value) : document.calci.txt.value.substring(1))">+/-</span>
+          <span class="btn col " style="background : var(--bg1)" onclick="document.calci.txt.value += '/'">/</span>
         </div>
         <div class="row">
-          <span class="btn col col-3" onclick="document.calci.txt.value += '('">(</span>
-          <span class="btn col col-3" onclick="document.calci.txt.value += ')'">)</span>
-          <span class="btn col col-6" onclick="equaling()">=</span>
+          <span class="btn col col-3" style="background : var(--bg1)" onclick="document.calci.txt.value += '('">(</span>
+          <span class="btn col col-3" style="background : var(--bg1)" onclick="document.calci.txt.value += ')'">)</span>
+          <span class="btn col col-6" style="background : var(--bg1)" onclick="equaling()">=</span>
         </div>
 
       </div>
@@ -63,43 +66,43 @@
       <div class="back" id="backId">
         <div class="row">
 
-          <span class="btn col " onclick="document.calci.txt.value += 'sin('">sin</span>
-          <span class="btn col" onclick="document.calci.txt.value += 'cos('">cos</span>
-          <span class="btn col" onclick="document.calci.txt.value += 'tan('">tan</span>
-          <span class="btn col" onclick="document.calci.txt.value += 'cot('">cot</span>
+          <span class="btn col "  style="background : var(--bg1)" onclick="document.calci.txt.value += 'sin('">sin</span>
+          <span class="btn col"  style="background : var(--bg1)" onclick="document.calci.txt.value += 'cos('">cos</span>
+          <span class="btn col" style="background : var(--bg1)" onclick="document.calci.txt.value += 'tan('">tan</span>
+          <span class="btn col"  style="background : var(--bg1)" onclick="document.calci.txt.value += 'cot('">cot</span>
         </div>
         <div class="row">
-          <span class="btn col" onclick="document.calci.txt.value += 'cosec('">cosec</span>
-          <span class="btn col " onclick="document.calci.txt.value += 'sec('">sec</span>
-          <span class="btn col " onclick="document.calci.txt.value += '√('">√x</span>
-          <span class="btn col " onclick="document.calci.txt.value += '**2'">x2</span>
+          <span class="btn col" style="background : var(--bg1)" onclick="document.calci.txt.value += 'cosec('">cosec</span>
+          <span class="btn col " style="background : var(--bg1)" onclick="document.calci.txt.value += 'sec('">sec</span>
+          <span class="btn col " style="background : var(--bg1)" onclick="document.calci.txt.value += '√('">√x</span>
+          <span class="btn col " style="background : var(--bg1)" onclick="document.calci.txt.value += '**2'">x2</span>
 
         </div>
         <div class="row">
-          <span class="btn col" onclick="document.calci.txt.value += 'asin('">asin</span>
-          <span class="btn col " onclick="document.calci.txt.value += 'acos('">acos</span>
-          <span class="btn col" onclick="document.calci.txt.value += 'atan('">atan</span>
-          <span class="btn col " onclick="document.calci.txt.value += 'acot('">acot</span>
+          <span class="btn col" style="background : var(--bg1)" onclick="document.calci.txt.value += 'asin('">asin</span>
+          <span class="btn col " style="background : var(--bg1)" onclick="document.calci.txt.value += 'acos('">acos</span>
+          <span class="btn col" style="background : var(--bg1)" onclick="document.calci.txt.value += 'atan('">atan</span>
+          <span class="btn col " style="background : var(--bg1)" onclick="document.calci.txt.value += 'acot('">acot</span>
         </div>
         <div class="row">
-          <span class="btn col" onclick="document.calci.txt.value += 'asec('">asec</span>
-          <span class="btn col " onclick="document.calci.txt.value += 'acosec('">acosec</span>
-          <span class="btn col " onclick="document.calci.txt.value += '%'">%</span>
-          <span class="btn col" onclick="document.calci.txt.value += '3.14'">π</span>
+          <span class="btn col" style="background : var(--bg1)" onclick="document.calci.txt.value += 'asec('">asec</span>
+          <span class="btn col " style="background : var(--bg1)" onclick="document.calci.txt.value += 'acosec('">acosec</span>
+          <span class="btn col " style="background : var(--bg1)" onclick="document.calci.txt.value += '%'">%</span>
+          <span class="btn col" style="background : var(--bg1)" onclick="document.calci.txt.value += '3.14'">π</span>
 
         </div>
         <div class="row">
-          <span class="btn col" onclick="document.calci.txt.value += 'log2('">log2(x)</span>
-          <span class="btn col " onclick="document.calci.txt.value += 'log10('">log10(x)</span>
-          <span class="btn col " onclick="document.calci.txt.value += 'log('">ln</span>
+          <span class="btn  col" style="background : var(--bg1)" onclick="document.calci.txt.value += 'log2('">log2(x)</span>
+          <span class="btn col " style="background : var(--bg1)" onclick="document.calci.txt.value += 'log10('">log10(x)</span>
+          <span class="btn col " style="background : var(--bg1)" onclick="document.calci.txt.value += 'log('">ln</span>
 
         </div>
 
 
         <div class="row">
-          <span class="btn col col-3" onclick="document.calci.txt.value += '('">(</span>
-          <span class="btn col col-3" onclick="document.calci.txt.value += ')'">)</span>
-          <span class="btn col col-6" onclick="equaling()">=</span>
+          <span class="btn col col-3" style="background : var(--bg1)" onclick="document.calci.txt.value += '('">(</span>
+          <span class="btn col col-3" style="background : var(--bg1)" onclick="document.calci.txt.value += ')'">)</span>
+          <span class="btn col col-6" style="background : var(--bg1)" onclick="equaling()">=</span>
 
         </div>
       </div>
@@ -154,17 +157,41 @@
           alert(e);
           document.calci.txt.value = "Invalid";
         }
-      
-
       }
 
-      function sqaure(form){
-        alert(form);
-      }
+
       function scientific() {
         var p = document.querySelector('#backId').classList.toggle('cardsChange');
 
       }
+
+      const mode = document.querySelector('.changemode');
+      const frontmode = document.querySelectorAll('.calculator .btn');
+      const results = document.querySelector('.results');
+      // const backmode = document.querySelector('.back');
+
+      mode.addEventListener('change',() =>{
+        results.classList.toggle('lightMode');
+        if(mode.checked == true){
+          document.body.setAttribute("data-theme","light");
+          for(let i=0; i<frontmode.length ; i++)
+          {
+            console.log(frontmode[i]);
+            frontmode[i].setAttribute('data-theme',"light");
+          }
+        }else{
+          document.body.setAttribute("data-theme","");
+          for(let i=0; i<frontmode.length ; i++)
+          {
+            console.log(frontmode[i]);
+            frontmode[i].setAttribute('data-theme',"");
+          }
+        }
+
+
+        // backmode.classList.toggle('lightMode');
+      })
+
     </script>
 
 
